--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
          <nav id="navbar">
-            <img src="braine.svg" alt="Brain" id="ahh" width="125" height="125">
+            <img src="braine.svg" alt="Brain" id="logo" width="125" height="125">
             <h1 id="title">Wernicke's Web</h1>
             <ul id="navbar2">
                     <a href="index.html">Home</a>
