--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <footer>
                         <h3>Author: Olivia Stevens</h3>
                         <h4>Posted: 08/24 </h4>
-                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150">
+                        <img src="me.jpeg" alt="A Picture of Me" width="122" height="150">
                         <br>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/"target="_blank">Author's Profile</a>
                     </footer>
@@ -123,7 +123,6 @@
                         <a href="index.html" style="margin-left: 10px;" >Home</a>
                         <a href="about.html" style="margin-left: 10px;" target="_blank">About</a>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/" style="margin-left: 10px;" target="_blank">Contact</a>
-                        <h3 id="copyright">© 2024 Olivia Stevens</h3>
                     </div>
                 </ul>
             </nav>
