--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
          <nav id="navbar">
-            <img src="braine.svg" alt="Brain" id="ahh" width="125" height="125">
+            <img src="braine.svg" alt="Brain" id="logo" width="125" height="125">
             <h1 id="title">Wernicke's Web</h1>
             <ul id="navbar2">
                     <a href="index.html">Home</a>
@@ -27,6 +27,7 @@
         <div id="container">
             <aside id="sidebar">
                 <h4>Filter by Month</h4>
+                <!-- Month Filter Buttons -->
                 <nav id="monthFilter">
                  <button data-month="all">All</button>
                  <button data-month="august_24">August 2024</button>
@@ -36,6 +37,7 @@
                  <button data-month="december_24">December 2024</button>
                  <button data-month="january_25">January 2025</button>
                  <button data-month="february_25">February 2025</button>
+        <!-- Add more months -->
                  </nav>
                  <h4>Filter by Category</h4>
                  <nav id="typeFilter">
@@ -105,7 +107,7 @@
                     <footer>
                         <h3>Author: Olivia Stevens</h3>
                         <h4>Posted: 08/24 </h4>
-                        <img src="me.jpeg" alt="A Picture of Me" width="122" height="150">
+                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150">
                         <br>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/"target="_blank">Author's Profile</a>
                     </footer>
@@ -118,7 +120,7 @@
             <nav>
                 <ul>
                     <div style="display: flex;">
-                        <img src="braine.svg" alt="Brain" width="50" height="50">
+                        <img src="braine.svg" alt="Brain" id="logobottom" width="50" height="50">
                         <h2>Wernicke's Web</h2>
                         <a href="index.html" style="margin-left: 10px;" >Home</a>
                         <a href="about.html" style="margin-left: 10px;" target="_blank">About</a>
