--- a/about.html
+++ b/about.html
@@ -48,6 +48,13 @@
         </article>
         <article>
             <header>
+                <h2>Charities I Support</h2>
+            </header>
+            <main>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae sit voluptatum pariatur nihil repellat consectetur deleniti amet dolorem ipsa sint, magni consequatur possimus quo enim reiciendis et sed aliquid incidunt veniam non dicta minus officiis. Placeat quod magni pariatur, itaque esse temporibus dolorum facilis dignissimos aliquam at omnis, harum aliquid nihil illum? Ut nemo ipsum deserunt ipsam architecto numquam reiciendis quidem quod, id aperiam veniam at repellat modi et hic mollitia inventore dolor, tempora est? Dolor omnis quod odio, doloribus dicta eos. Odio ab, mollitia reiciendis consequatur inventore expedita perspiciatis vero fuga libero beatae.</p>
+        </article>
+        <article>
+            <header>
                 <h2>Extra Info</h2>
             </header>
             <main>
