--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <img src="braine.svg" alt="Brain" id="logobottom" width="50" height="50">
                         <h2>Wernicke's Web</h2>
                         <a href="index.html" style="margin-left: 10px;" >Home</a>
-                        <a href="about.html" style="margin-left: 10px;" target="_blank">About</a>
+                        <a href="about.html" style="margin-left: 10px;" >About</a>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/" style="margin-left: 10px;" target="_blank">Contact</a>
                     </div>
                 </ul>
