--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                     <a href="https://www.linkedin.com/in/olivia-stevens05/"target="_blank">Contact</a>
             </ul>
          </nav>
+         <div class="banner">
+            <img src="tree2.jpeg" alt="tree">
+            <div class="banner-text">
+                <h1>Psychology Blog</h1>
+                <p>I talk about Psychology, Neuroscience, and Personal Experiences 
+                </p>
+            </div>
+         </div>
     </header>
     <main>
         <div id="container">
@@ -120,10 +128,10 @@
             <nav>
                 <ul>
                     <div style="display: flex;">
-                        <img src="braine.svg" alt="Brain" id="logobottom" width="50" height="50">
+                        <img src="braine.svg" alt="Brain" width="50" height="50" id="logobottom">
                         <h2>Wernicke's Web</h2>
                         <a href="index.html" style="margin-left: 10px;" >Home</a>
-                        <a href="about.html" style="margin-left: 10px;" >About</a>
+                        <a href="about.html" style="margin-left: 10px;" target="_blank">About</a>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/" style="margin-left: 10px;" target="_blank">Contact</a>
                     </div>
                 </ul>
