--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <footer>
                         <h3>Author: Olivia Stevens</h3>
                         <h4>Posted: 08/24 </h4>
-                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150">
+                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150" id="me">
                         <br>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/"target="_blank">Author's Profile</a>
                     </footer>
@@ -115,7 +115,7 @@
                     <footer>
                         <h3>Author: Olivia Stevens</h3>
                         <h4>Posted: 08/24 </h4>
-                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150">
+                        <img src="me.jpeg" alt="A picture of Me" width="122" height="150" id="me">
                         <br>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/"target="_blank">Author's Profile</a>
                     </footer>
@@ -131,7 +131,7 @@
                         <img src="braine.svg" alt="Brain" width="50" height="50" id="logobottom">
                         <h2>Wernicke's Web</h2>
                         <a href="index.html" style="margin-left: 10px;" >Home</a>
-                        <a href="about.html" style="margin-left: 10px;" target="_blank">About</a>
+                        <a href="about.html" style="margin-left: 10px;" >About</a>
                         <a href="https://www.linkedin.com/in/olivia-stevens05/" style="margin-left: 10px;" target="_blank">Contact</a>
                     </div>
                 </ul>
